# AI-PR-Review

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: design.md
examples/: review_report.md
src/ai_pr_review/: config.py  exceptions.py
src/ai_pr_review.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ai_pr_review/ai/: prompt_loader.py  risk_analyzer.py  suggestion_generator.py  summarizer.py
src/ai_pr_review/ai/prompts/: detect_risks.txt  generate_review_suggestions.txt  line_comments.txt  summarize_pr.txt
src/ai_pr_review/api/: __init__.py  health.py  review.py
src/ai_pr_review/github/: client.py  comment.py  models.py  parser.py
src/ai_pr_review/review/: diff.py  file_classifier.py  risk_rules.py  service.py
src/ai_pr_review/schemas/: __init__.py  response.py  review.py
src/ai_pr_review/utils/: logger.py
tests/: test_ai_risk_analyzer.py  test_ai_suggestion_generator.py  test_ai_summarizer.py  test_api_errors.py  test_file_classifier.py  test_github_client.py  test_github_comment.py  test_github_models.py  test_github_parser.py  test_prompt_loader.py  test_review_api.py  test_review_api_models.py  test_review_diff.py  test_review_service.py  test_risk_rules.py
